fix: align4 font displaying ligatures

--- a/Align-4-Game/src/index.css
+++ b/Align-4-Game/src/index.css
@@ -39,6 +39,7 @@ body {
   width: 220px;
   text-align: left;
   font-family: "Doppio One", sans-serif;
+  font-variant-ligatures: none;
   color: #ccc;
 }
 
